Bug 185793 - Selection markers never shown in file open/save dialogs
Summary: Selection markers never shown in file open/save dialogs
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: 5.44.0
Platform: openSUSE Linux
: HI normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: usability
: 140948 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-28 12:53 UTC by S. Burmeister
Modified: 2025-05-14 11:23 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2009-02-28 12:53:15 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    SuSE RPMs

When selecting attachments in kmail, adding files to the playlist within amarok or opening files from within some other application, I really miss the easy-select feature dolphin offers, i.e. the green "+" when hovering a file.

I think it would be very comfortable for users, if they could not only use it in dolphin, but in every file list.

Please tell me, if a separate bug for each application, e.g. amarok, is needed.
Comment 1 Nate Graham 2018-04-13 17:03:39 UTC
*** Bug 140948 has been marked as a duplicate of this bug. ***
Comment 2 Akseli Lahtinen 2025-04-09 07:57:24 UTC
Git commit d8441b7b5b2c8ebda18f5bde01f77ae802f4f48e by Akseli Lahtinen.
Committed on 09/04/2025 at 07:57.
Pushed by akselmo into branch 'master'.

Show single-click selection emblem when using single-click mouse mode

In open/save dialog, we had no way to select items when using single-click mouse mode. (Except holding down control key).

This adds the same emblem that Dolphin uses for its selections.

It is shown in both treeviews and listviews, but only when single-click mode is active and the filewidget allows selecting multiple items.
FIXED-IN: 6.14

M  +1    -0    src/filewidgets/CMakeLists.txt
M  +9    -4    src/filewidgets/kdiroperator.cpp
M  +29   -2    src/filewidgets/kdiroperatordetailview.cpp
M  +6    -1    src/filewidgets/kdiroperatordetailview_p.h
M  +31   -2    src/filewidgets/kdiroperatoriconview.cpp
M  +8    -1    src/filewidgets/kdiroperatoriconview_p.h
A  +63   -0    src/filewidgets/kfileitemselectionemblem.cpp     [License: LGPL(v2.0+)]
A  +39   -0    src/filewidgets/kfileitemselectionemblem.h     [License: LGPL(v2.0+)]
M  +58   -0    src/widgets/kfileitemdelegate.cpp
M  +15   -0    src/widgets/kfileitemdelegate.h

https://invent.kde.org/frameworks/kio/-/commit/d8441b7b5b2c8ebda18f5bde01f77ae802f4f48e
Comment 3 Patrick Silva 2025-05-14 02:27:15 UTC
The selection markers are still missing from open/save dialogs.

Operating System: Arch Linux 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Comment 4 Nate Graham 2025-05-14 02:29:31 UTC
They only show up in single-click mode; are you using that?
Comment 5 Patrick Silva 2025-05-14 11:23:23 UTC
Can confirm that the selection markers are available in single-click mode. They are available for files, not for folders, what makes sense.
Thank you, Nate.