src/widgets/kfileitemdelegate.h
@@ -9,6 +9,7 @@
 #define KFILEITEMDELEGATE_H
 
 #include "kiowidgets_export.h"
+#include <KFileItem>
 #include <QAbstractItemDelegate>
 #include <QTextOption>
 
@@ -398,6 +399,18 @@ public:
      */
     bool eventFilter(QObject *object, QEvent *event) override;
 
+    /**
+     * @return The rectangle where selectionEmblem is being drawn
+     */
+    QRect selectionEmblemRect() const;
+
+    /**
+     * Set the rectangle where selectionEmblem should be drawn in.
+     */
+    void setSelectionEmblemRect(QRect rect, int iconSize);
+
+    KFileItem fileItem(const QModelIndex &index) const;
+
 public Q_SLOTS:
     /**
      * Reimplemented from @ref QAbstractItemDelegate.
@@ -414,6 +427,8 @@ private:
     class Private;
     std::unique_ptr<Private> const d; /// @internal
     Q_DISABLE_COPY(KFileItemDelegate)
+
+    void drawSelectionEmblem(QStyleOptionViewItem option, QPainter *painter, const QModelIndex &index) const;
 };
 
 #endif // KFILEITEMDELEGATE_H
